[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tottie"
version = "0.2.1"
description = "Tottie wee image rendering library for 64×64 LED matrix displays"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "ephem>=4.1",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/d0ugal/tottie"
Repository = "https://github.com/d0ugal/tottie"
Issues = "https://github.com/d0ugal/tottie/issues"

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["tottie"]

[tool.hatch.build.targets.wheel.force-include]
"tottie/lune.png" = "tottie/lune.png"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-third-party = ["tottie"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
